Remove reference to modern java features